# vtclock

./: CMakeLists.txt  ChangeLog  vtclock.c  vtclock_config.h.in
msg/: CMakeLists.txt
